--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "axios": "^1.7.6",
+    "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "html-to-image": "^1.11.11",
     "jsonwebtoken": "^9.0.2",
